--- a/admin/index.html
+++ b/admin/index.html
@@ -33,17 +33,22 @@
 <script src="app/components/controllers/facilitiesCtrl.js"></script>
 <script src="app/components/controllers/homeCtrl.js"></script>
 <script src="app/components/controllers/loginCtrl.js"></script>
+<!--ANGULAR DIRECTIVES CONTROLLER-->
+<script src="app/directives/booking/controllers/bookingCtrl.js"></script>
+<script src="app/directives/booking/controllers/inquiryCtrl.js"></script>
+<script src="app/directives/home/controllers/homeSliderCtrl.js"></script>
+<script src="app/directives/home/controllers/homeFeatureCtrl.js"></script>
+<script src="app/directives/widget/controllers/navCtrl.js"></script>
+<script src="app/directives/widget/controllers/canvasCtrl.js"></script>
+<script src="app/directives/widget/controllers/aboutFaqCtrl.js"></script>
 <!--ANGULAR DIRECTIVES-->
-<script src="app/directives/controllers/navCtrl.js"></script>
-<script src="app/directives/controllers/canvasCtrl.js"></script>
-<script src="app/directives/controllers/homeSliderCtrl.js"></script>
-<script src="app/directives/controllers/homeFeatureCtrl.js"></script>
-<script src="app/directives/controllers/aboutFaqCtrl.js"></script>
-<script src="app/directives/navDir.js"></script>
-<script src="app/directives/canvasDir.js"></script>
-<script src="app/directives/homeSliderDir.js"></script>
-<script src="app/directives/homeFeatureDir.js"></script>
-<script src="app/directives/aboutFaqDir.js"></script>
+<script src="app/directives/booking/bookingDir.js"></script>
+<script src="app/directives/booking/inquiryDir.js"></script>
+<script src="app/directives/home/homeSliderDir.js"></script>
+<script src="app/directives/home/homeFeatureDir.js"></script>
+<script src="app/directives/widget/navDir.js"></script>
+<script src="app/directives/widget/canvasDir.js"></script>
+<script src="app/directives/widget/aboutFaqDir.js"></script>
 <!--ANGULAR SERVICES-->
 <script src="app/services/uikitServices.js"></script>
 
