--- a/admin/index.html
+++ b/admin/index.html
@@ -23,17 +23,17 @@
 <script src="libs/ng-storage-0.3.6.js"></script>
 
 <!--ANGULAR MAIN-->
-<script src="app/app.module.js"></script>
-<script src="app/app.config.js"></script>
+<script src="app/admin.min.js"></script>
+<!--<script src="app/app.config.js"></script>
 
-<!--ANGULAR CONTROLLERS-->
+&lt;!&ndash;ANGULAR CONTROLLERS&ndash;&gt;
 <script src="app/components/controllers/aboutCtrl.js"></script>
 <script src="app/components/controllers/activitiesCtrl.js"></script>
 <script src="app/components/controllers/bookCtrl.js"></script>
 <script src="app/components/controllers/facilitiesCtrl.js"></script>
 <script src="app/components/controllers/homeCtrl.js"></script>
 <script src="app/components/controllers/loginCtrl.js"></script>
-<!--ANGULAR DIRECTIVES CONTROLLER-->
+&lt;!&ndash;ANGULAR DIRECTIVES CONTROLLER&ndash;&gt;
 <script src="app/directives/booking/controllers/bookingCtrl.js"></script>
 <script src="app/directives/booking/controllers/inquiryCtrl.js"></script>
 <script src="app/directives/home/controllers/homeSliderCtrl.js"></script>
@@ -41,7 +41,7 @@
 <script src="app/directives/widget/controllers/navCtrl.js"></script>
 <script src="app/directives/widget/controllers/canvasCtrl.js"></script>
 <script src="app/directives/widget/controllers/aboutFaqCtrl.js"></script>
-<!--ANGULAR DIRECTIVES-->
+&lt;!&ndash;ANGULAR DIRECTIVES&ndash;&gt;
 <script src="app/directives/booking/bookingDir.js"></script>
 <script src="app/directives/booking/inquiryDir.js"></script>
 <script src="app/directives/home/homeSliderDir.js"></script>
@@ -49,8 +49,8 @@
 <script src="app/directives/widget/navDir.js"></script>
 <script src="app/directives/widget/canvasDir.js"></script>
 <script src="app/directives/widget/aboutFaqDir.js"></script>
-<!--ANGULAR SERVICES-->
-<script src="app/services/uikitServices.js"></script>
+&lt;!&ndash;ANGULAR SERVICES&ndash;&gt;
+<script src="app/services/uikitServices.js"></script>-->
 
 <script>if (window.module) module = window.module;</script>
 <script>window.jQuery || document.write('<script  src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"><\/script>')</script>
