--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 <script src="libs/ng-storage-0.3.6.js"></script>
 
 <!--ANGULAR MAIN-->
-<script src="app/app.module.js"></script>
-<script src="app/app.config.js"></script>
+<script src="app/app.min.js"></script>
+<!--<script src="app/app.config.js"></script>
 
-<!--ANGULAR CONTROLLERS-->
+&lt;!&ndash;ANGULAR CONTROLLERS&ndash;&gt;
 <script src="app/components/controllers/homeCtrl.js"></script>
 <script src="app/components/controllers/bookCtrl.js"></script>
 <script src="app/components/controllers/aboutCtrl.js"></script>
-<!--ANGULAR DIRECTIVES-->
+&lt;!&ndash;ANGULAR DIRECTIVES&ndash;&gt;
 <script src="app/directives/widgets/controllers/footerCtrl.js"></script>
 <script src="app/directives/widgets/controllers/headerCtrl.js"></script>
 <script src="app/directives/widgets/controllers/heroCtrl.js"></script>
@@ -65,7 +65,7 @@
 <script src="app/directives/home/featuredDir.js"></script>
 <script src="app/directives/home/activitiesDir.js"></script>
 <script src="app/directives/home/facilitiesDir.js"></script>
-<script src="app/directives/about/faqDir.js"></script>
+<script src="app/directives/about/faqDir.js"></script>-->
 
 <!--ANGULAR SERVICES-->
 <script src="app/services/uikitServices.js"></script>
