--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.4/js/components/slideshow.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.4/js/components/slideset.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.4/js/components/notify.min.js"></script>
-<script type="text/javascript" src="http://momentjs.com/downloads/moment-with-locales.min.js"></script>
+<script type="text/javascript" src="https://momentjs.com/downloads/moment-with-locales.min.js"></script>
 <script type="text/javascript" src="https://cdn.rawgit.com/FreddyFY/material-datepicker/master/dist/material-datepicker.min.js"></script>
 
 <!--LIBS-->
@@ -42,33 +42,7 @@
 
 <!--ANGULAR MAIN-->
 <script src="app/app.min.js"></script>
-<!--<script src="app/app.config.js"></script>
 
-&lt;!&ndash;ANGULAR CONTROLLERS&ndash;&gt;
-<script src="app/components/controllers/homeCtrl.js"></script>
-<script src="app/components/controllers/bookCtrl.js"></script>
-<script src="app/components/controllers/aboutCtrl.js"></script>
-&lt;!&ndash;ANGULAR DIRECTIVES&ndash;&gt;
-<script src="app/directives/widgets/controllers/footerCtrl.js"></script>
-<script src="app/directives/widgets/controllers/headerCtrl.js"></script>
-<script src="app/directives/widgets/controllers/heroCtrl.js"></script>
-<script src="app/directives/widgets/controllers/socialFeaturesCtrl.js"></script>
-<script src="app/directives/home/controllers/featuredCtrl.js"></script>
-<script src="app/directives/home/controllers/activitiesCtrl.js"></script>
-<script src="app/directives/home/controllers/facilitiesCtrl.js"></script>
-<script src="app/directives/about/controllers/faqCtrl.js"></script>
-
-<script src="app/directives/widgets/footerDir.js"></script>
-<script src="app/directives/widgets/headerDir.js"></script>
-<script src="app/directives/widgets/heroDir.js"></script>
-<script src="app/directives/widgets/socialFeatureDir.js"></script>
-<script src="app/directives/home/featuredDir.js"></script>
-<script src="app/directives/home/activitiesDir.js"></script>
-<script src="app/directives/home/facilitiesDir.js"></script>
-<script src="app/directives/about/faqDir.js"></script>-->
-
-<!--ANGULAR SERVICES-->
-<script src="app/services/uikitServices.js"></script>
 <script>if (window.module) module = window.module;</script>
 
 </body>
